--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
   <head>
     <meta charset="utf-8">
     <title>大哥国际厕所公司</title>
-    <!-- 专业拖慢速度100000年 -->
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- 外包团队制作 专业拖慢速度100000年 -->
        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@300;400;500;700&family=Noto+Serif+SC:wght@400;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
  
   </head>
@@ -157,7 +158,9 @@ background-repeat: no-repeat;
     </div>
      <p id="otto6" class="fade-in-out-animated" style="padding:10px">我司建100000年，负责运营新厕所项目，收费服务。<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 512 512"><path fill="#597B91" d="M508.333 32.666C508.333 16.35 494.984 3 478.668 3H29.032C14.348 3 2.333 15.015 2.333 29.699v452.602C2.333 496.985 14.348 509 29.032 509h449.635c16.316 0 29.666-13.35 29.666-29.666z"/><path fill="#2B5770" d="M478.668 488.915H29.032c-14.684 0-26.699-12.015-26.699-26.699v20.085C2.333 496.985 14.348 509 29.032 509h449.635c16.316 0 29.666-13.35 29.666-29.666v-20.085c0 16.316-13.349 29.666-29.665 29.666"/><path fill="#FFF" d="M254.83 363.93h-50.165a7.2 7.2 0 0 1-7.106-6.043l-17.027-104.54c-1.307-8.027-12.837-8.069-14.204-.052L148.49 357.94a7.2 7.2 0 0 1-7.098 5.99H92.368a7.2 7.2 0 0 1-7.108-6.051L55.086 171.175c-.708-4.378 2.673-8.349 7.108-8.349h33.035a7.2 7.2 0 0 1 7.149 6.344l13.042 108.936c.988 8.255 12.863 8.542 14.248.344l18.528-109.624a7.2 7.2 0 0 1 7.099-6h38.238a7.2 7.2 0 0 1 7.115 6.098l17.138 110.617c1.268 8.187 13.089 8.106 14.245-.098l15.552-110.42a7.2 7.2 0 0 1 7.13-6.196h31.1c4.447 0 7.831 3.992 7.103 8.379l-30.982 186.703a7.2 7.2 0 0 1-7.104 6.021m196.892-178.293l-14.204 16.834c-2.416 2.863-6.644 3.42-9.676 1.219c-9.228-6.698-19.095-10.393-30.809-10.393c-25.247 0-43.239 20.604-43.239 69.646c0 47.881 17.702 68.775 44.399 68.775c13.43 0 23.572-5.548 33.365-12.665c3.127-2.272 7.497-1.635 9.877 1.41l13.358 17.097c2.376 3.041 1.924 7.401-1.001 9.918c-13.55 11.661-33.619 21.384-58.209 21.384c-55.137 0-91.991-36.854-91.991-105.92c0-67.615 38.596-105.34 90.54-105.34c24.04 0 41.319 6.536 56.404 17.622c3.336 2.454 3.857 7.248 1.186 10.413"/></svg><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><path d="M20 4H4c-1.11 0-2 .89-2 2v12a2 2 0 0 0 2 2h16c1.11 0 2-.89 2-2V6a2 2 0 0 0-2-2m-5 6h-4v1h3c.55 0 1 .45 1 1v3c0 .55-.45 1-1 1h-1v1h-2v-1H9v-2h4v-1h-3c-.55 0-1-.45-1-1V9c0-.55.45-1 1-1h1V7h2v1h2v2z" fill="#333333"/></svg>
      <br>
-     <a id="otto7" href="./login/" target="_blank" class="button">Api开放中心</a></p>
+     <a id="otto7" href="./login/" target="_blank" class="button">Api开放中心</a>
+     
+     <a id="otto7" href="./toliet/" target="_blank" class="button">试用厕所测试版</a></p>
    
     <div class="fade-in-out-animated" style="display:flex;margin-bottom:-1px;padding:9px;margin-top:0px">
       <div style="width:90px" class="regeng-cards">
