--- a/login/index.html
+++ b/login/index.html
@@ -28,14 +28,14 @@
   </div>
   <div class="flex flex-wrap items-center gap-x-4 gap-y-2">
     <p class="text-sm/6 text-gray-900">
-      <strong class="font-semibold">大哥国际厕所公司</strong><svg viewBox="0 0 2 2" aria-hidden="true" class="mx-2 inline size-0.5 fill-current"><circle r="1" cx="1" cy="1" /></svg>用户授权管理
+      <strong class="font-semibold">大哥国际厕所公司</strong><svg viewBox="0 0 2 2" aria-hidden="true" class="mx-2 inline size-0.5 fill-current"><circle r="1" cx="1" cy="1" /></svg>AUTH
     </p>
   </div>
 </div>
 
 <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
   <div class="sm:mx-auto sm:w-full sm:max-w-sm">
-    <h2 class="mt-10 text-center text-2xl/9 font-bold tracking-tight">登录</h2>
+    <h2 class="mt-10 text-center text-2xl/9 font-bold tracking-tight">🆔身份验证登录</h2>
   </div>
 
   <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
@@ -55,7 +55,7 @@
           <label for="password" class="block text-sm/6 font-medium ">密码</label>
           <div class="text-sm">
             <a 
-    style="color:#4da7fc" href="#" class="font-semibold text-indigo-400 hover:text-indigo-300">忘了密码？</a>
+    style="color:#4da7fc" href="#" class="font-semibold text-indigo-400 hover:text-indigo-300">PoweredbyToliet</a>
           </div>
         </div>
         <div class="mt-2">
@@ -69,7 +69,7 @@
     </form>
 
     <p class="mt-10 text-center text-sm/6 text-gray-400">
-      仅供娱乐 请勿当真
+      请勿当真
       
     </p>
   </div>
