--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     }
     .regeng-cards:hover{
       color:#fff;
-      background-color: rgb(52,143,232);
+      background-color: rgb(1,126,184);
       box-shadow: 1px 1px 1px 1px #ededed;
     }
     .gengbaike-body{
@@ -72,7 +72,7 @@ background-repeat: no-repeat;
 .button {
   display: inline-block;
   border-radius: 4px;
-  background-color: rgb(81,184,253);
+  background-color: rgb(1,126,184);
   border: none;
   color: #FFFFFF;
   text-align: center;
@@ -139,15 +139,18 @@ background-repeat: no-repeat;
       border-radius:20px;
    
 }
+.dage-a{
+  color:rgb(1,126,184);}
   </style>
   <body>
     <header>
-     <header-p id="otto5">大哥国际厕所集团
-     <br>   <a style="color:rgb(81,184,253);" href="./bank/">大哥国际银行</a>
-     <a style="color:rgb(81,184,253);" href="./viptoliet.html">厕所加盟</a>
-     <a style="color:rgb(81,184,253);" href="./toliet/">体验</a></header-p>
+     <header-p id="otto5"><img style="height:3%;" alt="大哥科技" src="./大哥科技.png"/>
+     <br>   <a class="dage-a" href="./bank/">大哥国际银行</a>
+     <a class="dage-a" style="color:rgb(1,126,184);" href="./viptoliet.html">厕所加盟</a>
+     <a class="dage-a" href="./toliet/">体验</a></header-p>
     </header>
      <div class="fade-in-out-animated baike-background">
+       <h2 style="position:relative;left:10px;top:90px;text-align:center;">大哥科技，走向全城<br>DAGE TECHNOLOGY</h2>
        <div class="play_body">
          <button style="color:#fff;"  onclick="otto1.showModal()" class="play_btn">
            <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><path fill="#ffffff" d="M8 17.175V6.825q0-.425.3-.713t.7-.287q.125 0 .263.037t.262.113l8.15 5.175q.225.15.338.375t.112.475t-.112.475t-.338.375l-8.15 5.175q-.125.075-.262.113T9 18.175q-.4 0-.7-.288t-.3-.712"/></svg>
@@ -224,7 +227,7 @@ background-repeat: no-repeat;
 <h3 style="margin-bottom:6px;">集团视频</h3>
 我县所有公共厕所皆更换为大哥供应，每分钟100元，一个月就赚取了10万。
 <br>
-<video style="border-radius:20px; margin-bottom:10px;margin-top:5px;width:auto;height:auto;" controls>
+<video poster="." style="border-radius:20px; margin-bottom:10px;margin-top:5px;width:auto;height:auto;" controls>
 <source onerror="console.error('视频出错了500');" src="video.mp4" type="video/mp4">
 那我缺的视频模块谁给我补啊
 </video><br>
