--- a/PlayGames/dageCard/index.html
+++ b/PlayGames/dageCard/index.html
@@ -199,7 +199,7 @@
 
     <script>
         // 屏幕方向检测
-        class ScreenOrientation {
+     /**   class ScreenOrientation {
             constructor() {
                 this.overlay = document.getElementById('orientationOverlay');
                 this.mainContent = document.getElementById('mainContent');
@@ -233,7 +233,8 @@
                 });
             }
         }
-
+        
+      **/
         // 游戏统计管理
         class GameStats {
             constructor() {
