--- a/bank/index.html
+++ b/bank/index.html
@@ -25,6 +25,16 @@
         .container { max-width: 1200px; margin: 0 auto; padding: 0 20px; }
         .hidden { display: none !important; }
         .text-gold { color: var(--gold-color); }
+                .btn-primary {
+            background: #fff);
+            color: #686868f3;
+            border:1px solid #686868f3;
+            padding: 10px 25px;
+            font-weight: bold;
+            border-radius: 5px;
+            box-shadow: 0 4px 15px rgba(212, 175, 55, 0.3);
+        }
+        
         .btn-gold {
             background: linear-gradient(135deg, var(--gold-color), var(--gold-light));
             color: #000;
@@ -143,6 +153,8 @@
                 <h1>大哥国际<br>走向全城</h1>
                 <p>全城首家滚木存储银行</p>
                 <button class="btn-gold" style="font-size: 1.2rem; padding: 15px 40px;" onclick="alert('对不起你不配')">立即开户</button>
+              <br>    <button class="btn-primary" style="margin-top:5px;font-size: 1.2rem; padding: 15px 40px;" onclick="window.location.href = './stock/';">股票市场</button>
+            
             </div>
         </section>
 
