--- a/PlayGames/index.html
+++ b/PlayGames/index.html
@@ -1,210 +1,232 @@
-<html>
-  <head>
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
     <meta charset="utf-8">
-    <title>NowGames | BigBrother</title>
-    <!-- 大哥国际厕所公司开发 -->
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  </head>
-  <style>
-  body{
-    background-color: rgba(0,0,0,0.788);
-  }
-/* From Uiverse.io by satyamchaudharydev */ 
-.card {
-  margin-right:3px;
-  --width: 190px;
-  --height: 210px;
-  --primary: #00b9ae;
-  --text: #f9f9f9b2;
-  --secondary: #f9f9f933;
-  --radius: 20px;
-  color: #fff;
-  font-family: Arial, Helvetica, sans-serif;
-  width: var(--width);
-  height: var(--height);
-  background: linear-gradient(
-      180deg,
-      rgba(22, 24, 30, 0) 0%,
-      rgba(22, 24, 30, 0.7) 65.28%
-    ),
-    linear-gradient(0deg, rgba(22, 24, 30, 0.4), rgba(22, 24, 30, 0.4));
-  background-size: cover;
-  border-radius: var(--radius);
-  display: flex;
-  flex-direction: column;
-  gap: 0.7rem;
-  padding: 1em;
-  padding-top: 1.4em;
-}
+    <title>大哥游戏</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        :root {
+            --primary: #00b9ae;
+            --bg-dark: #000;
+            --card-bg: rgba(255, 255, 255, 0.1);
+            --ios-blur: blur(20px);
+        }
 
+        body {
+            background-color: var(--bg-dark);
+            color: #fff;
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+            margin: 0;
+            padding: 20px;
+            overflow-x: hidden;
+        }
 
-/*  */
+        /* 顶部导航 */
+        header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 30px;
+            padding: 10px 5px;
+        }
 
-.card .card__title {
-  margin: 0;
-  font-size: 1.2rem;
-  font-weight: bold;
-  margin-top: 0.2rem;
-}
+        h1 {
+            font-size: 34px;
+            font-weight: 800;
+            margin: 0;
+            letter-spacing: -1px;
+        }
 
-.rating {
-  margin-top: 0.5em;
-  width: 85px;
-  height: 16px;
-  background-image: url("data:image/svg+xml,%20%3Csvg%0A%20%20%20%20%20%20%20%20%20%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%0A%20%20%20%20%20%20%20%20%20%20width%3D%2217%22%0A%20%20%20%20%20%20%20%20%20%20height%3D%2217%22%0A%20%20%20%20%20%20%20%20%20%20viewBox%3D%220%200%2017%2017%22%0A%20%20%20%20%20%20%20%20%20%20fill%3D%22none%22%0A%20%20%20%20%20%20%20%20%3E%0A%20%20%20%20%20%20%20%20%20%20%3Cpath%0A%20%20%20%20%20%20%20%20%20%20%20%20d%3D%22M8.51948%201.625C9.1214%201.625%2010.0427%204.16625%2010.4636%205.43013C10.6014%205.8437%2010.9837%206.13054%2011.4192%206.14904C12.7373%206.20505%2015.375%206.39722%2015.375%207.0384C15.375%207.66696%2013.5161%209.17543%2012.5322%209.92976C12.1816%2010.1986%2012.0365%2010.6604%2012.1687%2011.082C12.5631%2012.34%2013.2755%2014.8755%2012.7573%2015.3009C12.2506%2015.717%2010.2147%2014.2326%209.15246%2013.4009C8.77021%2013.1016%208.22949%2013.1012%207.84719%2013.4004C6.78473%2014.2321%204.75246%2015.717%204.28166%2015.3009C3.79912%2014.8745%204.47615%2012.3275%204.84741%2011.0727C4.97086%2010.6555%204.82425%2010.2029%204.47885%209.93826C3.49798%209.18681%201.625%207.66933%201.625%207.0384C1.625%206.3962%204.2711%206.20444%205.5871%206.14878C6.0197%206.13048%206.3998%205.84769%206.53973%205.43793C6.97041%204.17673%207.91633%201.625%208.51948%201.625Z%22%0A%20%20%20%20%20%20%20%20%20%20%20%20fill%3D%22%2300B9AE%22%0A%20%20%20%20%20%20%20%20%20%20%20%20stroke%3D%22%2300B9AE%22%0A%20%20%20%20%20%20%20%20%20%20%20%20stroke-width%3D%222%22%0A%20%20%20%20%20%20%20%20%20%20%20%20stroke-linecap%3D%22round%22%0A%20%20%20%20%20%20%20%20%20%20%20%20stroke-linejoin%3D%22round%22%0A%20%20%20%20%20%20%20%20%20%20%2F%3E%0A%20%20%20%20%20%20%20%20%3C%2Fsvg%3E");
-  background-repeat: space;
-}
+        .signin {
+            background-color: var(--primary);
+            color: white;
+            border: none;
+            padding: 8px 20px;
+            font-weight: 600;
+            font-size: 15px;
+            border-radius: 20px;
+            cursor: pointer;
+            transition: transform 0.2s;
+        }
 
-.card .card__info {
-  display: flex;
-  margin-top: auto;
-  font-size: 0.8rem;
-  color: var(--text);
-  font-weight: 400;
-  justify-content: space-between;
-}
+        .signin:active {
+            transform: scale(0.95);
+        }
 
-.card .card__btns {
-  display: flex;
-  gap: 0.6rem;
-}
+        /* 轮播容器 */
+        .section-title {
+            font-size: 22px;
+            font-weight: 700;
+            margin: 20px 0 15px 5px;
+            opacity: 0.9;
+        }
 
-.card button {
-  border: none;
-  background: none;
-  cursor: pointer;
-  background: var(--primary);
-  color: #fff;
-  border-radius: var(--radius);
-  padding: 0.5rem 1rem;
-  font-size: 1rem;
-  font-weight: bold;
-  transition: 0.2s;
-}
+        .carousel-container {
+            display: flex;
+            overflow-x: auto;
+            scroll-snap-type: x mandatory; /* 苹果风格对齐 */
+            gap: 15px;
+            padding-bottom: 20px;
+            scrollbar-width: none; /* 隐藏滚动条 (Firefox) */
+        }
 
-.card button:hover {
-  opacity: 0.8;
-  transform: scale(0.9);
-}
+        .carousel-container::-webkit-scrollbar {
+            display: none; /* 隐藏滚动条 (Chrome/Safari) */
+        }
 
-.card .add-btn {
-  color: #fff;
-  padding: 0.5em 0.8em;
-  background: rgba(249, 249, 249, 0.2);
-  border-radius: 14px;
-}
+        /* 苹果风格卡片 */
+        .card {
+            flex: 0 0 280px; /* 固定卡片宽度 */
+            height: 380px;
+            scroll-snap-align: center;
+            background: linear-gradient(145deg, rgba(40,40,40,0.8), rgba(20,20,20,0.8));
+            backdrop-filter: var(--ios-blur);
+            -webkit-backdrop-filter: var(--ios-blur);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            border-radius: 28px;
+            padding: 24px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            position: relative;
+            transition: transform 0.3s ease;
+        }
 
-.card .watch-btn {
-  flex: 1;
-}
+        .card:active {
+            transform: scale(0.98);
+        }
 
-/* From Uiverse.io by barisdogansutcu */ 
-svg {
- width: 3.25em;
- transform-origin: center;
- animation: rotate4 2s linear infinite;
-}
+        .card__title {
+            font-size: 24px;
+            font-weight: 700;
+            margin: 0 0 8px 0;
+        }
 
-circle {
- fill: none;
- stroke: hsl(214, 97%, 59%);
- stroke-width: 2;
- stroke-dasharray: 1, 200;
- stroke-dashoffset: 0;
- stroke-linecap: round;
- animation: dash4 1.5s ease-in-out infinite;
-}
+        .rating-stars {
+            display: flex;
+            gap: 2px;
+            margin-bottom: 10px;
+        }
 
-@keyframes rotate4 {
- 100% {
-  transform: rotate(360deg);
- }
-}
+        .episode__type {
+            font-size: 13px;
+            color: rgba(255, 255, 255, 0.6);
+            line-height: 1.5;
+            margin: 0;
+        }
 
-@keyframes dash4 {
- 0% {
-  stroke-dasharray: 1, 200;
-  stroke-dashoffset: 0;
- }
+        /* 底部按钮区域 */
+        .card__btns {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            background: rgba(255, 255, 255, 0.05);
+            padding: 12px;
+            border-radius: 18px;
+        }
 
- 50% {
-  stroke-dasharray: 90, 200;
-  stroke-dashoffset: -35px;
- }
+        .add-btn {
+            background: none;
+            border: none;
+            color: var(--primary);
+            font-weight: bold;
+            font-size: 14px;
+        }
 
- 100% {
-  stroke-dashoffset: -125px;
- }
-}
+        .watch-btn {
+            background: var(--primary);
+            color: white;
+            border: none;
+            border-radius: 15px;
+            padding: 6px 18px;
+            font-weight: 800;
+            font-size: 14px;
+            text-transform: uppercase;
+            cursor: pointer;
+            text-decoration: none;
+        }
 
-.signin{
-  position: absolute;
-  right:9px;
-  top:9px;
-   display: flex;
-  align-items: center;
-  font-family: inherit;
-  cursor: pointer;
-  font-weight: 500;
-  font-size: 17px;
-  padding: 0.8em 1.3em 0.8em 0.9em;
-  color: white;
-background-color: #00b9ae;
-  border: none;
-  letter-spacing: 0.05em;
-  border-radius: 16px;
-}
-}
+        /* 页脚 */
+        footer {
+            margin-top: 50px;
+            text-align: center;
+            padding: 40px 0;
+            color: rgba(255,255,255,0.4);
+            font-size: 12px;
+            border-top: 1px solid rgba(255,255,255,0.1);
+        }
 
+        .footer-icons {
+            margin-top: 10px;
+            font-size: 20px;
+        }
 
-  </style>
-  <body>
-    <h1 style="font-weight:200;color:#fff;">大哥游戏</h1>
- <button class="signin">登录</button>
- <h1  style="color:#fff;">新的</h1>
- <div style="display:flex;">
-    <div class="card">
-    <div class="card-top">
-        <p class="card__title">罗勒比斯</p>
-        <div class="rating">
-            <svg width="17" height="17" viewBox="0 0 17 17" fill="none">
-                <path d="M8.51948 1.625C9.1214 1.625 10.0427 4.16625 10.4636 5.43013C10.6014 5.8437 10.9837 6.13054 11.4192 6.14904C12.7373 6.20505 15.375 6.39722 15.375 7.0384C15.375 7.66696 13.5161 9.17543 12.5322 9.92976C12.1816 10.1986 12.0365 10.6604 12.1687 11.082C12.5631 12.34 13.2755 14.8755 12.7573 15.3009C12.2506 15.717 10.2147 14.2326 9.15246 13.4009C8.77021 13.1016 8.22949 13.1012 7.84719 13.4004C6.78473 14.2321 4.75246 15.717 4.28166 15.3009C3.79912 14.8745 4.47615 12.3275 4.84741 11.0727C4.97086 10.6555 4.82425 10.2029 4.47885 9.93826C3.49798 9.18681 1.625 7.66933 1.625 7.0384C1.625 6.3962 4.2711 6.20444 5.5871 6.14878C6.0197 6.13048 6.3998 5.84769 6.53973 5.43793C6.97041 4.17673 7.91633 1.625 8.51948 1.625Z" fill="#00B9AE" stroke="#00B9AE" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
-            </svg>
+        a { text-decoration: none; }
+    </style>
+</head>
+<body>
+
+    <header>
+        <h1>大哥游戏</h1>
+        <button class="signin">登录</button>
+    </header>
+
+    <p class="section-title">重磅推荐</p>
+
+    <div class="carousel-container">
+        
+        <div class="card">
+            <div class="card-content">
+                <p class="card__title">Gb</p>
+                <div class="rating-stars">
+                    <svg width="14" height="14" viewBox="0 0 17 17"><path d="M8.5 1.6l2 3.8 4.2.6-3 3 1 4.2-4.2-2.2-4.2 2.2 1-4.2-3-3 4.2-.6z" fill="#00B9AE"/></svg>
+                    <svg width="14" height="14" viewBox="0 0 17 17"><path d="M8.5 1.6l2 3.8 4.2.6-3 3 1 4.2-4.2-2.2-4.2 2.2 1-4.2-3-3 4.2-.6z" fill="#00B9AE"/></svg>
+                </div>
+                <p class="episode__type">开发者：BigBrotherToliet.Co.LTD</p>
+            </div>
+            <div class="card__btns">
+                <span class="add-btn">0K 赞</span>
+                <a href="./regames/to_2.html" class="watch-btn">游玩</a>
+            </div>
         </div>
-    </div>
-    <div class="card__info">
-        <p class="episode__type">*For parody purposes, do not take seriously</p>
-    </div>
-    <div class="card__btns">
-        <button class="add-btn">14</button>
-      <a href="./regames/to_2.html">
-    <button class="watch-btn">Play</button>
-    </a>
-    </div>
-</div>
-  <div class="card">
-    <div class="card-top">
-        <p class="card__title">JumpBigBrother大哥跳</p>
-        <div class="rating">
-            <svg width="17" height="17" viewBox="0 0 17 17" fill="none">
-                <path d="M8.51948 1.625C9.1214 1.625 10.0427 4.16625 10.4636 5.43013C10.6014 5.8437 10.9837 6.13054 11.4192 6.14904C12.7373 6.20505 15.375 6.39722 15.375 7.0384C15.375 7.66696 13.5161 9.17543 12.5322 9.92976C12.1816 10.1986 12.0365 10.6604 12.1687 11.082C12.5631 12.34 13.2755 14.8755 12.7573 15.3009C12.2506 15.717 10.2147 14.2326 9.15246 13.4009C8.77021 13.1016 8.22949 13.1012 7.84719 13.4004C6.78473 14.2321 4.75246 15.717 4.28166 15.3009C3.79912 14.8745 4.47615 12.3275 4.84741 11.0727C4.97086 10.6555 4.82425 10.2029 4.47885 9.93826C3.49798 9.18681 1.625 7.66933 1.625 7.0384C1.625 6.3962 4.2711 6.20444 5.5871 6.14878C6.0197 6.13048 6.3998 5.84769 6.53973 5.43793C6.97041 4.17673 7.91633 1.625 8.51948 1.625Z" fill="#00B9AE" stroke="#00B9AE" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
-            </svg>
+
+        <div class="card">
+            <div class="card-content">
+                <p class="card__title">大哥斗地主</p>
+                <div class="rating-stars">
+                    <svg width="14" height="14" viewBox="0 0 17 17"><path d="M8.5 1.6l2 3.8 4.2.6-3 3 1 4.2-4.2-2.2-4.2 2.2 1-4.2-3-3 4.2-.6z" fill="#00B9AE"/></svg>
+                    <svg width="14" height="14" viewBox="0 0 17 17"><path d="M8.5 1.6l2 3.8 4.2.6-3 3 1 4.2-4.2-2.2-4.2 2.2 1-4.2-3-3 4.2-.6z" fill="#00B9AE"/></svg>
+                </div>
+                <p class="episode__type">开发者：美国大哥红烧肉公司<br>大哥斗地主JQ</p>
+            </div>
+            <div class="card__btns">
+                <span class="add-btn">91K 赞</span>
+                <a href="./dageCard/" class="watch-btn">开始</a>
+            </div>
         </div>
+
+        <div class="card">
+            <div class="card-content">
+                <p class="card__title">我爱消大哥</p>
+                <div class="rating-stars">
+                    <svg width="14" height="14" viewBox="0 0 17 17"><path d="M8.5 1.6l2 3.8 4.2.6-3 3 1 4.2-4.2-2.2-4.2 2.2 1-4.2-3-3 4.2-.6z" fill="#00B9AE"/></svg>
+                </div>
+                <p class="episode__type">开发者：大哥国际厕所集团游戏<br>JumpBigBrother! 简单的操作，不简单的快乐。</p>
+            </div>
+            <div class="card__btns">
+                <span class="add-btn">4K 赞</span>
+                <a href="./regames/to.html" class="watch-btn">获取</a>
+            </div>
+        </div>
+
     </div>
-    <div class="card__info">
-        <p class="episode__type">*For parody purposes, do not take seriously</p>
-    </div>
-    <div class="card__btns">
-        <button class="add-btn">4</button>
-<a href="./regames/to.html">
-    <button class="watch-btn">Play</button>
-    </a>
-    </div>
-</div>
-</div>
-<p style="text-align:center;color:#fff">大哥国际厕所集团<br>
-<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 16 16"><path fill="#ffffff" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8m15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0M5.408 5.89c-.83 0-1.318.64-1.318 1.753v.742c0 1.108.479 1.727 1.318 1.727c.69 0 1.138-.435 1.187-1.05h1.147v.114c-.058 1.147-1.029 1.938-2.343 1.938c-1.612 0-2.518-1.028-2.518-2.729v-.747c0-1.7.914-2.75 2.518-2.75c1.319 0 2.29.812 2.343 1.999v.11H6.595c-.049-.638-.506-1.108-1.187-1.108Zm5.404 0c-.831 0-1.319.64-1.319 1.753v.742c0 1.108.48 1.727 1.319 1.727c.69 0 1.138-.435 1.186-1.05h1.147v.114c-.057 1.147-1.028 1.938-2.342 1.938c-1.613 0-2.518-1.028-2.518-2.729v-.747c0-1.7.914-2.75 2.518-2.75c1.318 0 2.29.812 2.342 1.999v.11h-1.147c-.048-.638-.505-1.108-1.186-1.108Z"/></svg>
-<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><path fill="#ffffff" d="m11.3 9.8l-2-2q-.15-.15-.225-.337T9 7.075V3q0-.425.288-.712T10 2h4q.425 0 .713.288T15 3v4.075q0 .2-.075.388T14.7 7.8l-2 2q-.15.15-.325.213t-.375.062t-.375-.062T11.3 9.8m2.9 2.9q-.15-.15-.212-.325T13.925 12t.063-.375t.212-.325l2-2q.15-.15.338-.225T16.925 9H21q.425 0 .713.288T22 10v4q0 .425-.288.713T21 15h-4.075q-.2 0-.387-.075T16.2 14.7zM2 14v-4q0-.425.288-.712T3 9h4.075q.2 0 .388.075T7.8 9.3l2 2q.15.15.213.325t.062.375t-.062.375t-.213.325l-2 2q-.15.15-.337.225T7.075 15H3q-.425 0-.712-.288T2 14m7 7v-4.075q0-.2.075-.387T9.3 16.2l2-2q.15-.15.325-.212t.375-.063t.375.063t.325.212l2 2q.15.15.225.338t.075.387V21q0 .425-.288.713T14 22h-4q-.425 0-.712-.288T9 21"/></svg></p>
- 
-  </body>
-  </html>
+
+    <footer>
+        <p>大哥国际厕所集团 版权所有</p>
+        <div class="footer-icons">
+            <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor"><path d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8m15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0M5.408 5.89c-.83 0-1.318.64-1.318 1.753v.742c0 1.108.479 1.727 1.318 1.727c.69 0 1.138-.435 1.187-1.05h1.147v.114c-.058 1.147-1.029 1.938-2.343 1.938c-1.612 0-2.518-1.028-2.518-2.729v-.747c0-1.7.914-2.75 2.518-2.75c1.319 0 2.29.812 2.343 1.999v.11H6.595c-.049-.638-.506-1.108-1.187-1.108Zm5.404 0c-.831 0-1.319.64-1.319 1.753v.742c0 1.108.48 1.727 1.319 1.727c.69 0 1.138-.435 1.186-1.05h1.147v.114c-.057 1.147-1.028 1.938-2.342 1.938c-1.613 0-2.518-1.028-2.518-2.729v-.747c0-1.7.914-2.75 2.518-2.75c1.318 0 2.29.812 2.342 1.999v.11h-1.147c-.048-.638-.505-1.108-1.186-1.108Z"/></svg>
+        </div>
+    </footer>
+
+</body>
+</html>
