--- a/music/AppClient.html
+++ b/music/AppClient.html
@@ -391,7 +391,7 @@
 </header>
 
 <div id="browse-view">
-    <h1>浏览</h1>
+    <h1>精选</h1>
     <div class="featured-banner">
         <img id="dagepic" src="./img/p1.png" alt="Featured" onerror="this.src='https://via.placeholder.com/600x250?text=Apple+Music+Style'">
     </div>
@@ -413,7 +413,8 @@
     <div class="ios-card">
       
         <div class="profile-header">
-            <img class="profile-avatar-large" id="profile-avatar-edit" src="https://via.placeholder.com/150" onclick="changeAvatar()" onerror="this.src='data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxMDAiIGhlaWdodD0iMTAwIiB2aWV3Qm94PSIwIDAgMjQgMjQiPjxwYXRoIGZpbGw9IiNjY2MiIGQ9Ik0xMiA0YTQgNCAwIDAgMSA0IDRhNCA0IDAgMCAxLTQgNGE0IDQgMCAwIDEtNC00YTQgNCAwIDAgMSA0LTRtMCAxMGM0LjQyIDAgOCAxLjc5IDggNHYySDR2LTJjMC0yLjIxIDMuNTgtNCA4LTRIi8+PC9zdmc+'">
+            <img class="profile-avatar-large" id="profile-avatar-edit" alt="点击修改" src="https://via.placeholder.com/150" onclick="changeAvatar()" >
+      </img> 
             <div class="profile-input-group">
                 <input type="text" class="profile-name-input" id="profile-name-edit" value="用户名" onblur="syncUser()">
                 <div class="profile-identity-wrapper">
@@ -424,7 +425,8 @@
             </div>
         </div>
     </div>
-      <span style="font-size:14px; ">头像，用户名，头衔皆为可改内容，点击它们即可修改。由于软件问题，暂不支持本地保存，因此您下次还需要改。</span>
+      <span style="font-size:14px; ">
+        <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><g fill="#333333"><path d="M11 10.98a1 1 0 1 1 2 0v6a1 1 0 1 1-2 0zm1-4.929a1 1 0 1 0 0 2a1 1 0 0 0 0-2"/><path fill-rule="evenodd" d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10s10-4.477 10-10S17.523 2 12 2M4 12a8 8 0 1 0 16 0a8 8 0 0 0-16 0" clip-rule="evenodd"/></g></svg>头像，用户名，头衔皆为可改内容，点击它们即可修改。由于软件问题，暂不支持本地保存，因此您下次还需要改。</span>
   
     <div class="submit-area">
         <h3>投稿</h3>
@@ -440,9 +442,9 @@
         <h3>关于全成唱片</h3>
         <div class="ios-card submit-card">
             <div class="submit-info">
-                <h4>全成唱片 1.2.0</h4>
+                <h4>全成唱片 1.2.1</h4>
                 <p>制作者：<br>NaOH.<br>鸣谢:<br>SPACEDLS 图标设计，音频创作
-                <br><strong>更新日志:</strong><br>本次更新优化了界面状态，以及用户模块修改功能多样性。支持头像修改，头衔修改。增强设备兼容能力，判定设备版本。<strong>新版本推送后请退出重进软件，如未更新，请卸载重新安装。如果界面无法正常加载，请检查你的 WebView 版本是否太低。</strong><br><br>如果还没解决，可尝试硬刷新。点击下方按钮即可。
+                <br><strong>更新日志:</strong><br>本次更新优化加载能力，歌曲ai制作标识，音频换源。<strong>新版本推送后请退出重进软件，如未更新，请卸载重新安装。如果界面无法正常加载，请检查你的 WebView 版本是否太低。</strong><br><br>如果还没解决，可尝试硬刷新。点击下方按钮即可。
               <br>  <button onclick="mload()" class="pri_btn">软件内硬刷新</button></p>
             </div>
         </div>
@@ -545,7 +547,8 @@
     <div class="toast-text">操作失败</div>
 </div>
 
-<p id="consoles" style="font-size:12px;color:var(--text-sub); text-align:center; margin-top:50px; opacity: 0.7;">Copyright © 2026 全成唱片<br>本站仅供娱乐 音频来源自用户手动提交 如侵权请联络应用程序管理者删除<br>AppClient1.2.0.android</p>
+<p id="consoles" style="font-size:12px;color:var(--text-sub); text-align:center; margin-top:50px; opacity: 0.7;">Copyright © 2026 全成唱片<br>本站仅供娱乐 音频来源自用户手动提交 如侵权请联络应用程序管理者删除<br>AppClient1.2.1<br>
+<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 16 16"><path d="M14 1.5a.5.5 0 0 0-1 0V2h-.5a.5.5 0 0 0 0 1h.5v.5a.5.5 0 0 0 1 0V3h.5a.5.5 0 0 0 0-1H14zm-8.61.63a.2.2 0 0 1 .06-.104C5.474 2.002 5.493 2 5.5 2s.026.002.052.026a.2.2 0 0 1 .059.104a4.2 4.2 0 0 0 1.135 2.124A4.2 4.2 0 0 0 8.87 5.39a.2.2 0 0 1 .104.059c.024.025.026.044.026.051s-.002.026-.026.052a.2.2 0 0 1-.104.058a4.2 4.2 0 0 0-2.124 1.137A4.2 4.2 0 0 0 5.611 8.87a.2.2 0 0 1-.059.104c-.026.024-.044.026-.051.026c-.008 0-.026-.002-.052-.026a.2.2 0 0 1-.058-.104a4.2 4.2 0 0 0-1.137-2.124A4.2 4.2 0 0 0 2.13 5.61a.2.2 0 0 1-.103-.059C2.003 5.526 2 5.507 2 5.501c0-.008.002-.026.026-.052a.2.2 0 0 1 .104-.059a4.2 4.2 0 0 0 2.123-1.136A4.2 4.2 0 0 0 5.391 2.13M5.5 1c-.576 0-.99.453-1.088.926a3.2 3.2 0 0 1-.865 1.62a3.2 3.2 0 0 1-1.62.865c-.473.098-.927.513-.926 1.091c.001.576.454.989.926 1.087c.426.088 1.067.31 1.62.864s.776 1.195.865 1.621c.098.473.512.926 1.089.926s.99-.454 1.089-.927c.088-.425.31-1.066.864-1.62a3.2 3.2 0 0 1 1.62-.864C9.547 6.491 10 6.077 10 5.5s-.453-.99-.926-1.09a3.2 3.2 0 0 1-1.62-.863a3.2 3.2 0 0 1-.864-1.62C6.49 1.452 6.078 1 5.5 1m5.44 4a2.1 2.1 0 0 1 0 1h.56A1.5 1.5 0 0 1 13 7.5v4a1.5 1.5 0 0 1-1.5 1.5h-4A1.5 1.5 0 0 1 6 11.5v-.56a2.1 2.1 0 0 1-1 0v.56A2.5 2.5 0 0 0 7.5 14h4a2.5 2.5 0 0 0 2.5-2.5v-4A2.5 2.5 0 0 0 11.5 5zM8 8.5a.5.5 0 0 1 .5-.5H11a.5.5 0 0 1 0 1H8.5a.5.5 0 0 1-.5-.5m.5 1.5a.5.5 0 0 0 0 1H10a.5.5 0 0 0 0-1zm-6 2a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 0 1H3v.5a.5.5 0 0 1-1 0V14h-.5a.5.5 0 0 1 0-1H2v-.5a.5.5 0 0 1 .5-.5"/></svg>部分音频由AI生成，已在数据中标明。</p>
 
 <script>
     const audio = document.getElementById('main-audio');
@@ -602,7 +605,7 @@
                 <img class="song-cover" src="${s.cover}" onerror='showToast("图片加载失败")'>
                 <div class="song-info">
                     <div class="song-name">${s.title}</div>
-                    <div class="song-artist">${s.artist}</div>
+                    <div class="song-artist">${s.artist}<br><span style="font-size:9px;">${s.showAi}</span></div>
                 </div>
                 <div class="more-btn"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><path fill="currentColor" d="M19.345 5.993c.278-.103.61-.19.97-.125c.442.08.836.329 1.1.692c.215.296.28.634.308.93c.027.287.027.646.027 1.055v.11c0 .3.002.62-.106.915a1.75 1.75 0 0 1-.392.623c-.22.225-.509.363-.78.492l-.068.033l-1.785.857c-.369.177-.692.332-.964.432c-.261.097-.57.18-.905.136v4.286c0 1.814-1.435 3.321-3.25 3.321s-3.25-1.507-3.25-3.321s1.435-3.322 3.25-3.322a3.2 3.2 0 0 1 1.75.522V10h.003q-.004-.254-.003-.545v-.11c0-.3-.002-.62.106-.915a1.75 1.75 0 0 1 .392-.623c.22-.225.509-.363.78-.492l.068-.033l1.785-.857c.369-.177.692-.332.964-.432"/><path fill="currentColor" fill-rule="evenodd" d="M2.25 5A.75.75 0 0 1 3 4.25h12a.75.75 0 0 1 0 1.5H3A.75.75 0 0 1 2.25 5m0 4A.75.75 0 0 1 3 8.25h10a.75.75 0 0 1 0 1.5H3A.75.75 0 0 1 2.25 9m0 4a.75.75 0 0 1 .75-.75h6a.75.75 0 0 1 0 1.5H3a.75.75 0 0 1-.75-.75m0 4a.75.75 0 0 1 .75-.75h5a.75.75 0 0 1 0 1.5H3a.75.75 0 0 1-.75-.75" clip-rule="evenodd"/></svg></div>
             </div>
