升级硬刷新bug

--- a/music/AppClient.html
+++ b/music/AppClient.html
@@ -990,7 +990,9 @@
     }
 
     function mload(){
-        if (confirm("是否硬刷新软件？请注意保存资源。")) { location.reload(true); }
+        if (confirm("是否硬刷新软件？请注意保存资源。")) { 
+window.location.reload(true);
+ }
     }
 </script>
 </body>
